[gd_scene load_steps=23 format=3 uid="uid://bgafvay5yoxvs"]

[ext_resource type="Script" path="res://Scripts/AudioManager.gd" id="1_u77k5"]
[ext_resource type="AudioStream" uid="uid://bb2van4lgsevg" path="res://Assets/Sound/FX/Collect.mp3" id="2_rnsst"]
[ext_resource type="AudioStream" uid="uid://b8gvkvamyraeb" path="res://Assets/Sound/FX/stagspeak.wav" id="3_c2pf6"]
[ext_resource type="AudioStream" uid="uid://6hlwacno8qe0" path="res://Assets/Sound/FX/Crunch.mp3" id="3_c58qx"]
[ext_resource type="AudioStream" uid="uid://cbn06jkh3eskx" path="res://Assets/Sound/Music/bossspeak.wav" id="3_tiidq"]
[ext_resource type="AudioStream" uid="uid://sww1hbuygqxc" path="res://Assets/Sound/Music/StagBoss.mp3" id="3_x5f52"]
[ext_resource type="AudioStream" uid="uid://3vgddp2uaqlr" path="res://Assets/Sound/FX/Whoosh.wav" id="3_xcl2n"]
[ext_resource type="AudioStream" uid="uid://dxl5xpwfx2h6f" path="res://Assets/Sound/Music/Kubjelle3.mp3" id="5_pyodd"]
[ext_resource type="AudioStream" uid="uid://bx6wis46hfub1" path="res://Assets/Sound/Music/fire.wav" id="6_4aagc"]
[ext_resource type="AudioStream" uid="uid://brsd7hei0v4u2" path="res://Assets/Sound/Music/heart.mp3" id="9_i6xyj"]
[ext_resource type="AudioStream" uid="uid://bql3j4k0km8qh" path="res://Assets/Sound/FX/vineattack.wav" id="11_ory3j"]
[ext_resource type="AudioStream" uid="uid://dbfylpq8mhdmf" path="res://Assets/Sound/Music/kubjellefinal2.wav" id="12_om7t3"]
[ext_resource type="AudioStream" uid="uid://b8x4s4xbmcnfl" path="res://Assets/Sound/Music/not moonlight sonata (I swear).mp3" id="13_bv5tv"]
[ext_resource type="AudioStream" uid="uid://clyb0g0gycc22" path="res://Assets/Sound/Music/heart2.mp3" id="13_qb3cp"]
[ext_resource type="AudioStream" uid="uid://i4plvcck2q71" path="res://Assets/Sound/FX/trampoline.wav" id="14_l3s3j"]
[ext_resource type="AudioStream" uid="uid://rwppadxdklvf" path="res://Assets/Sound/FX/kubjelleHurt.wav" id="15_bf0lf"]
[ext_resource type="AudioStream" uid="uid://cpmb44kib1ygc" path="res://Assets/Sound/FX/thisisntover.mp3" id="16_x7csb"]
[ext_resource type="AudioStream" uid="uid://r75wfkoaq2c0" path="res://Assets/Sound/FX/explosion_kubjelle_angry.wav" id="17_iq46r"]
[ext_resource type="AudioStream" uid="uid://bloer8b6ca4jb" path="res://Assets/Sound/Music/God killer.mp3" id="19_rqpah"]
[ext_resource type="AudioStream" uid="uid://dejuw3u8gewlp" path="res://Assets/Sound/Music/Kalia_ancient.mp3" id="20_5owt8"]
[ext_resource type="AudioStream" uid="uid://vq4i0y7g68js" path="res://Assets/Sound/Music/hunterthemereal.mp3" id="20_tcx47"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_qi8ms"]
streams_count = 1
random_pitch = 1.03
stream_0/stream = ExtResource("3_c2pf6")
stream_0/weight = 1.0

[node name="AudioManager" type="Node"]
script = ExtResource("1_u77k5")

[node name="CoinPickup" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_rnsst")

[node name="DamageSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_c58qx")

[node name="bossmusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_x5f52")

[node name="bossmusic2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_pyodd")

[node name="stagspeak" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_qi8ms")
volume_db = -6.265

[node name="CoinPickup2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_rnsst")

[node name="BossSee" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_tiidq")

[node name="JumpSfx" type="AudioStreamPlayer" parent="."]

[node name="DeathSfx" type="AudioStreamPlayer" parent="."]

[node name="RespawnSfx" type="AudioStreamPlayer" parent="."]

[node name="LevelCompleteSfx" type="AudioStreamPlayer" parent="."]

[node name="whoosh" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_xcl2n")

[node name="crackle" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_4aagc")

[node name="BGmusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_i6xyj")

[node name="VineShoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_ory3j")

[node name="finalk" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_om7t3")

[node name="heart2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_qb3cp")

[node name="heart3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_bv5tv")

[node name="trampoline" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_l3s3j")

[node name="kubjellehurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_bf0lf")

[node name="thisisntover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_x7csb")
volume_db = 13.619

[node name="kubjellesplode" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_iq46r")

[node name="huntertheme_old" type="AudioStreamPlayer" parent="."]
stream = ExtResource("19_rqpah")

[node name="huntertheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource("20_tcx47")

[node name="kaliatheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource("20_5owt8")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]

[node name="TransTimer" type="Timer" parent="."]
one_shot = true
